<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active_safe_module_title">XPILOT Safety 主动安全</string>
    <string name="adjust_rear_mirror_unable_with_acc_active">智能辅助驾驶功能已开启，无法调节后视镜</string>
    <string name="adjust_rear_mirror_unable_with_cruise_active">定速巡航功能已开启，无法调节后视镜</string>
    <string name="adjust_window">滑动调节</string>
    <string name="air_protect_sound_1">音效1</string>
    <string name="air_protect_sound_2">音效2</string>
    <string name="air_protect_sound_title">空气主动防护音效</string>
    <string name="als_error">自动大灯高度调节故障</string>
    <string name="apa_exam_dismiss_dialog_tips">考试通过后，请重新打开超级智能辅助泊车</string>
    <string name="apa_exam_pass">恭喜你，超级智能辅助泊车考试已通过</string>
    <string name="app_car_control">车控</string>
    <string name="app_car_control_hint">车辆控制</string>
    <string name="app_name">车辆控制</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ars_auto_mode_closed_tip">自动尾翼模式已关闭</string>
    <string name="ars_control_error_operation">操作失败，请重试</string>
    <string name="ars_control_init_content">当前尾翼需初始化后才可正常使用，请检查尾翼是否有遮挡，点击确定进行初始化。</string>
    <string name="ars_control_init_error_tips">尾翼初始化异常，请及时检修</string>
    <string name="ars_control_init_success">尾翼初始化已完成</string>
    <string name="ars_control_init_title">初始化尾翼</string>
    <string name="ars_control_precheck_close_trunk">请先关闭后备箱</string>
    <string name="ars_control_precheck_moving">尾翼运动中，请稍候再试</string>
    <string name="ars_control_reset_content">检测到尾翼运动受阻，可能有异物影响尾翼运动，请检查尾翼情况。点击重置将尝试重新开关尾翼。</string>
    <string name="ars_control_reset_error_tips">尾翼重置异常，请及时检修</string>
    <string name="ars_control_reset_success">尾翼重置已完成</string>
    <string name="ars_control_reset_title">尾翼异常</string>
    <string name="ars_control_warning_fold_content">尾翼一旦开始收回，无法中途停止，请确保周围环境空旷，避免出现意外。是否确定立即收回？</string>
    <string name="ars_control_warning_title">安全提示</string>
    <string name="ars_control_warning_unfold_content">尾翼一旦开始展开，无法中途停止，请确保周围环境空旷，避免出现意外。是否确定立即展开？</string>
    <string name="as_camping_failed">计算失败，请下次再试</string>
    <string name="as_camping_invalid_value">超出悬架调节范围，车身无法调节到完全水平</string>
    <string name="as_camping_success">计算成功，正在执行悬架调节</string>
    <string name="as_cdc_comfort">舒适</string>
    <string name="as_cdc_sport">运动</string>
    <string name="as_cdc_stand">标准</string>
    <string name="as_cdc_title">悬架刚度调节</string>
    <string name="as_easy_loading_open_failed_for_moving">行车中无法打开轻松载物</string>
    <string name="as_easy_loading_open_failed_for_trailer_mode">请先关闭拖车模式和悬架维修模式</string>
    <string name="as_easy_loading_summary">降低后轮悬架高度，以便装卸物品</string>
    <string name="as_easy_loading_title">轻松载物</string>
    <string name="as_handle_failed_for_trailer_hook">请先退出拖挂房车模式</string>
    <string name="as_height_adjust_tips">前方经过颠簸路段，即将为您调节悬架</string>
    <string name="as_height_save_error_tips">创建失败，请重试</string>
    <string name="as_height_save_success_tips">创建成功，您可在地图中查看该记忆点</string>
    <string name="as_repair_open_with_trailer_mode">请先关闭拖车模式</string>
    <string name="as_repair_open_without_p_gear">请在P挡下进行调节</string>
    <string name="as_repair_title">悬挂维修模式</string>
    <string name="as_welcome_summary">上下车时自动降低悬架高度，以便进出</string>
    <string name="as_welcome_title">悬架迎宾</string>
    <string name="atl_color_adjust_prompt">停车后可预览升降扬声器灯效</string>
    <string name="atl_control_panel_title">氛围灯调节</string>
    <string name="atl_effect_breath">平稳呼吸</string>
    <string name="atl_effect_none">固定亮度</string>
    <string name="atls_error">氛围灯故障</string>
    <string name="auto_change_eco_response">电量较低，已自动切换至节能模式以增加续航里程</string>
    <string name="auto_door_handle_summary">解锁或开门时，外门把手自动弹出</string>
    <string name="auto_door_handle_title">门把手自动展开</string>
    <string name="auto_drive_mode_high_hint">电量充足，已切换至标准模式</string>
    <string name="auto_drive_mode_low_hint">电量较低，已切换至节能模式</string>
    <string name="auto_drive_mode_remind_summary">当电量较低时提醒用户切换至节能模式，\n电量恢复正常后提醒用户恢复成原有驾驶模式</string>
    <string name="auto_drive_mode_summary">当电量较低时，系统自动切换至节能模式，\n直至电量恢复正常</string>
    <string name="auto_drive_mode_title">低电量驾驶保护</string>
    <string name="auto_drive_module_title">XPILOT Driving 辅助驾驶</string>
    <string name="auto_fix_chair_tips1">选择身高、体重后座椅将自动的调节到合适的驾驶位置</string>
    <string name="auto_park_feature_help_1">智能辅助泊车功能可以辅助驾驶员将车辆泊入车位，具体操作方法如下：\n1、如何激活智能辅助泊车？\n智能辅助泊车功能可以通过以下方式启动：\n①按压方向盘左侧的X形标识的按键，即自定义按键。\n②点击大屏导航栏的超级泊车图标。\n③在语音助手唤醒后，直接说“我要泊车”。\n2、如何有效寻找车位和开始智能辅助泊车？\n保持车辆在靠近车位的一侧道路向前行驶。\n找到车位时，系统会发出声音，并在触摸屏显示出识别出的可停车位，选择一个触摸屏显示的可泊车位，点击开始，即开始智能辅助泊车。\n3、开始智能辅助泊车前需要做的准备：\n①保持车辆驻车\n一定要确定点中了“开始”按钮后，大屏上出现文字提示“泊车开始，请松开制动踏板”才能松刹车哦，防止怠速溜车。\n②确认车位环境\n作为辅助功能，智能辅助泊车功能还无法达到人类驾驶员的水平，为了确保泊车安全，开始前确认环境是很有必要的。\n4、紧急情况如何停止和恢复智能辅助泊车\n①踩下制动踏板。\n②点击“继续”可以恢复，点击“退出”可以退出智能辅助泊车。</string>
    <string name="auto_park_feedback">开启后，提示停车位信息，可通过语音、大屏泊车按键或已设定好的方向盘左侧自定义按键进入该功能。由于泊车辅助并非完全自动驾驶功能，其过程请您注意周围环境，存在危险时请准备接管车辆。</string>
    <string name="auto_park_key_desc">使用钥匙控制智能辅助泊车/泊出</string>
    <string name="auto_park_key_feature_help_1">当您预停的车位较窄，不方便下车开门的场景，可以通过提前下车，在车外使用车钥匙，实现遥控泊车。\n找到车位并已经选择车位后（默认已经帮助您选择一个车位），将挡位切换到停车挡（P挡），然后下车关好车门：\n1. 长按钥匙的有一个P字样的图标，当车辆双闪灯开始闪烁时松开，此时表示车辆已进入等待控制模式；\n2. 双击钥匙的第一个P字样的图标，智能辅助泊车开始。</string>
    <string name="auto_park_key_feedback">开启后，通过钥匙来控制智能辅助泊车的开启、暂停、恢复与退出，过程中请您时刻注意周围环境，遇到危险请暂停或退出遥控泊车。</string>
    <string name="auto_park_key_keyword">遥控泊车</string>
    <string name="auto_park_key_sw">钥匙遥控泊车</string>
    <string name="auto_park_key_type">钥匙遥控泊车方式设置</string>
    <string name="auto_park_key_type_desc">默认按住P键进行钥匙遥控泊车</string>
    <string name="auto_park_key_type_double">双击</string>
    <string name="auto_park_key_type_feedback">请您再次确认，车外泊车钥匙控制将设置为%1$s开启。</string>
    <string name="auto_park_key_type_long">长按</string>
    <string name="auto_park_keyword">超级智能辅助泊车</string>
    <string name="auto_park_module_title">XPILOT Parking 辅助泊车</string>
    <string name="auto_park_phone_desc">手机蓝牙控制智能辅助泊车/泊出</string>
    <string name="auto_park_phone_feature_help_1">当需要通过智能辅助泊车辅助泊入窄车位，可以通过手机连接蓝牙，实现遥控泊车。\n\n在XPILOT系统识别到车位后，驾驶员可以挂入P挡，下车后打开蓝牙，连接车辆后打开“小鹏汽车”APP，并进入手机泊车模块，经过指纹认证为车主后，可点击泊车开始按钮，启动智能辅助泊车。\n遥控泊车的手机按键操作方法如下：</string>
    <string name="auto_park_phone_feedback">开启后，通过手机App来控制智能辅助泊车的开启、暂停、恢复与退出。</string>
    <string name="auto_park_phone_keyword">遥控泊车</string>
    <string name="auto_park_phone_sw">手机遥控泊车</string>
    <string name="auto_park_phone_type">手机遥控泊车方式设置</string>
    <string name="auto_park_phone_type_click">单击</string>
    <string name="auto_park_phone_type_desc">默认按住按钮进行手机遥控泊车</string>
    <string name="auto_park_phone_type_feedback">请您再次确认，车外泊车手机控制将设置为%1$s开启。</string>
    <string name="auto_park_phone_type_long">长按</string>
    <string name="auto_park_sound_effect">泊车辅助提示音</string>
    <string name="btn_close">关闭</string>
    <string name="child_lock_rl_title">左后门儿童锁</string>
    <string name="child_lock_rr_title">右后门儿童锁</string>
    <string name="child_lock_title">儿童锁</string>
    <string name="child_mode_title">儿童安全模式</string>
    <string name="cms_mirror_adjust_panel_title">流媒体外后视镜调节</string>
    <string name="cms_mirror_back_view_assist_switch">倒车视野辅助</string>
    <string name="cms_mirror_back_view_assist_switch_tip">倒车时自动扩展视野范围</string>
    <string name="cms_mirror_dan_object_rec_switch">危险目标标记</string>
    <string name="cms_mirror_dan_object_rec_switch_tip">行车雷达报警时标记视野内危险目标</string>
    <string name="cms_mirror_high_speed_view_assist_switch">高速视野辅助</string>
    <string name="cms_mirror_high_speed_view_assist_switch_tip">车速大于80km/h时自动收窄视野范围</string>
    <string name="cms_mirror_reset_default_view">恢复默认视野</string>
    <string name="cms_mirror_turn_view_assist_switch">转向视野辅助</string>
    <string name="cms_mirror_turn_view_assist_switch_tip">转向时自动扩展视野范围</string>
    <string name="cms_mirror_view_range">视野范围</string>
    <string name="door_angle_title">前排车门开启范围设置</string>
    <string name="double_click_open_title">双击钥匙解锁键开车门</string>
    <string name="high_speed_desc">车辆高速行驶一段时间后会自动关闭车窗</string>
    <string name="high_speed_tv">高速自动关窗</string>
    <string name="isla_confirm_mode_desc">开启后每次调节巡航车速时，均需驾驶员通过巡航控制手柄确认</string>
    <string name="isla_confirm_mode_title">调节车速时需驾驶员确认</string>
    <string name="isla_setting_title">自定义调速</string>
    <string name="isla_speed_range_desc">只响应以下区间内的限速值限速调节区间</string>
    <string name="isla_speed_range_title">限速调节区间</string>
    <string name="item_1">1</string>
    <string name="item_2">2</string>
    <string name="item_3">3</string>
    <string name="item_4">4</string>
    <string name="item_5">5</string>
    <string name="laboratory_leave_locking_tips">开启后，所有车门关闭且主副驾无人时，携钥匙（手机和NFC卡片钥匙除外）远离自动闭锁</string>
    <string name="laboratory_leave_locking_title">离开自动闭锁</string>
    <string name="laboratory_near_unlocking_tips">开启后，所有车门关闭且主副驾无人时，携钥匙（手机和NFC卡片钥匙除外）靠近自动解锁</string>
    <string name="laboratory_near_unlocking_title">靠近自动解锁</string>
    <string name="nfc_key_desc">启用后，NFC卡片可解锁、上锁、启动车辆</string>
    <string name="nfc_key_title">NFC钥匙</string>
    <string name="open_sdc_with_win_sw_summary">前排车门开启时自动降窗，关闭时自动升窗</string>
    <string name="open_sdc_with_win_sw_title">车窗随动</string>
    <string name="park_auto_unlock_desc">挂入P挡并解开安全带后自动解锁</string>
    <string name="park_auto_unlock_title">驻车自动解锁</string>
    <string name="sdc_brake_close_door_summary">开启后，踩刹车关门，再次踩刹车将停止关门</string>
    <string name="sdc_brake_close_door_title">踩刹车关鹏翼门</string>
    <string name="settings_new_lock_title">车锁</string>
    <string name="settings_new_win_title">车窗</string>
    <string name="space_capsule_sleep_protect_dialog_msg_1_content">睡眠空间中，车辆将保持上电。</string>
    <string name="space_capsule_sleep_protect_dialog_msg_1_title">保持上电</string>
    <string name="space_capsule_sleep_protect_dialog_msg_2_content">当续航低于 120km 时，小P会通过语音进行提醒。</string>
    <string name="space_capsule_sleep_protect_dialog_msg_2_title">续航监控</string>
    <string name="space_capsule_sleep_protect_dialog_msg_3_content">建议开启空调自动模式，开启后空调将定期自动切换内外循环，保障你的睡眠空气安全。</string>
    <string name="space_capsule_sleep_protect_dialog_msg_3_title">空气安全</string>
    <string name="unlock_response_title">车外解锁上锁反馈</string>
    <string name="win_auto_close_by_lock_title">锁车自动关窗</string>
</resources>