<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/background" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/img_cms_mirror_control" app:layout_constraintEnd_toEndOf="0" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/close_btn" android:layout_marginTop="16dp" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:vuiAction="Click" app:vuiDisableHitEffect="true" app:vuiLabel="@string/btn_close" style="@style/XButton.Icon.Large.Close"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_01_size" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="34dp" android:text="@string/cms_mirror_adjust_panel_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:vuiMode="DISABLED" style="@style/TextStyle.title"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="vertical" android:layout_width="560dp" android:layout_height="wrap_content" android:layout_marginTop="144dp" android:layout_marginStart="52dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/cms_mirror_dan_object_rec_sw" android:background="@color/x_transparent_white" android:layout_width="match_parent" android:layout_height="136dp" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/cms_mirror_dan_object_rec_switch" app:list_two_text_sub="@string/cms_mirror_dan_object_rec_switch_tip" style="@style/XList.Two.WrapHeight"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/cms_mirror_reverse_view_sw" android:background="@color/x_transparent_white" android:layout_width="match_parent" android:layout_height="136dp" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/cms_mirror_back_view_assist_switch" app:list_two_text_sub="@string/cms_mirror_back_view_assist_switch_tip" style="@style/XList.Two.WrapHeight"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/cms_mirror_turn_view_sw" android:background="@color/x_transparent_white" android:layout_width="560dp" android:layout_height="136dp" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/cms_mirror_turn_view_assist_switch" app:list_two_text_sub="@string/cms_mirror_turn_view_assist_switch_tip" style="@style/XList.Two.WrapHeight"/>
        <com.xiaopeng.xui.widget.XListTwo android:id="@+id/cms_mirror_high_speed_view_sw" android:background="@color/x_transparent_white" android:layout_width="match_parent" android:layout_height="136dp" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/cms_mirror_high_speed_view_assist_switch" app:list_two_text_sub="@string/cms_mirror_high_speed_view_assist_switch_tip" style="@style/XList.Two.WrapHeight"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XTextView android:textSize="34sp" android:textColor="@color/x_theme_text_01" android:id="@+id/cms_mirror_view_angle_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="718dp" android:text="@string/cms_mirror_view_range" android:layout_marginStart="84dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XSegmented android:id="@+id/cms_mirror_view_angle_segmented" android:layout_width="496dp" android:layout_height="80dp" android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="@+id/cms_mirror_view_angle_title" app:layout_constraintTop_toBottomOf="@+id/cms_mirror_view_angle_title" app:segment_selected_pos="0" app:segment_text_size="32sp" app:segment_texts="@array/cms_view_range_array" style="@style/XSegmented.Rect.Text"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/cms_mirror_reset_button" android:text="@string/cms_mirror_reset_default_view" android:layout_marginEnd="87dp" app:layout_constraintBottom_toBottomOf="@+id/cms_mirror_view_angle_segmented" app:layout_constraintEnd_toEndOf="0" style="@style/cms_mirror_reset_button"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
