<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="32sp" android:textColor="@color/x_theme_text_01_night" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/space_capsule_sleep_protect_dialog_msg_1_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#c2757d8d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11dp" android:text="@string/space_capsule_sleep_protect_dialog_msg_1_content"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="32sp" android:textColor="@color/x_theme_text_01_night" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/space_capsule_sleep_protect_dialog_msg_2_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#c2757d8d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11dp" android:text="@string/space_capsule_sleep_protect_dialog_msg_2_content"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="32sp" android:textColor="@color/x_theme_text_01_night" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/space_capsule_sleep_protect_dialog_msg_3_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#c2757d8d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11dp" android:layout_marginBottom="78dp" android:text="@string/space_capsule_sleep_protect_dialog_msg_3_content"/>
</com.xiaopeng.xui.widget.XLinearLayout>
