<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XFrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageView android:layout_gravity="end|bottom" android:id="@+id/settings_car_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="214dp" android:src="@drawable/img_car_set_lock"/>
    <com.xiaopeng.xui.widget.XScrollView style="@style/setting_scroll_style.new">
        <com.xiaopeng.xui.widget.XLinearLayout android:gravity="start" android:orientation="vertical" android:id="@+id/settings_scroll_layout" android:paddingBottom="44dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/setting_scroll_list_padding_start">
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/settings_new_lock_title_tv" android:text="@string/settings_new_lock_title" app:vuiMode="DISABLED" style="@style/SettingCateTextStyle"/>
            <com.xiaopeng.xui.widget.XListMultiple android:id="@+id/unlock_response_item" android:background="@drawable/sub_item_top_bg" android:layout_width="882dp" android:layout_height="210dp" app:list_multiple_bottom="@layout/layout_unlock_response_tab" app:list_multiple_text="@string/unlock_response_title" app:vuiFatherLabel="@string/settings_new_lock_title" style="@style/XList.Multiple.Two"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/dhc_sw_item" android:background="@drawable/sub_item_mid_bg" android:layout_width="882dp" android:layout_height="136dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/auto_door_handle_title" app:list_two_text_sub="@string/auto_door_handle_summary" app:vuiFatherLabel="@string/settings_new_lock_title"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/park_auto_unlock_sw_item" android:layout_width="882dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/park_auto_unlock_title" app:list_two_text_sub="@string/park_auto_unlock_desc" app:vuiFatherLabel="@string/settings_new_lock_title" style="@style/park_auto_unlock_sw_item_style"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/nfc_key_sw_item" android:background="@drawable/sub_item_mid_bg" android:visibility="@integer/nfc_key_visibility" android:layout_width="882dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/nfc_key_title" app:list_two_text_sub="@string/nfc_key_desc" app:vuiFatherLabel="@string/settings_new_lock_title" style="@style/XList.Two.WrapHeight"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/laboratory_near_unlock" android:visibility="@integer/laboratory_near_unlock_visibility" android:layout_width="882dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_near_unlocking_title" app:list_two_text_sub="@string/laboratory_near_unlocking_tips" app:vuiFatherLabel="@string/settings_new_lock_title" style="@style/laboratory_near_unlock_style"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/laboratory_leave_lock" android:background="@drawable/sub_item_bottom_bg" android:visibility="@integer/laboratory_near_unlock_visibility" android:layout_width="882dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/laboratory_leave_locking_title" app:list_two_text_sub="@string/laboratory_leave_locking_tips" app:vuiFatherLabel="@string/settings_new_lock_title" style="@style/XList.Two.WrapHeight"/>
            <com.xiaopeng.xui.widget.XFrameLayout android:id="@+id/double_click_open_layout" android:background="@drawable/sub_item_mid_bg" android:visibility="gone" android:layout_width="882dp" android:layout_height="@dimen/double_click_open_layout_height" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top">
                <com.xiaopeng.xui.widget.XTextView android:layout_gravity="start|top" android:id="@+id/double_click_open_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/double_click_open_title" android:layout_marginStart="40dp" app:vuiMode="DISABLED" style="@style/double_click_open_title_tv_style"/>
                <com.xiaopeng.xui.widget.XTabLayout android:layout_gravity="start|top" android:id="@+id/double_click_open_tab" android:layout_width="802dp" android:layout_height="80dp" android:layout_marginTop="@dimen/double_click_open_tab_margin_top" android:layout_marginStart="40dp" app:indicatorMarginBottom="6dp" app:indicatorMaxHeight="2dp" app:indicatorShadowRadius="2dp" app:indicatorWidthPercent="100%" app:titles="@array/double_click_open_type" app:vuiLabel="@string/double_click_open_title"/>
            </com.xiaopeng.xui.widget.XFrameLayout>
            <com.xiaopeng.xui.widget.XFrameLayout android:id="@+id/sdc_brake_close_door_layout" android:background="@drawable/sub_item_mid_bg" android:visibility="gone" android:layout_width="882dp" android:layout_height="252dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top">
                <com.xiaopeng.xui.widget.XTextView android:layout_gravity="start|top" android:id="@+id/sdc_brake_close_door_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/sdc_brake_close_door_title" android:layout_marginStart="40dp" app:vuiMode="DISABLED" style="@style/TextStyle.title"/>
                <com.xiaopeng.xui.widget.XTextView android:layout_gravity="start" android:id="@+id/sdc_brake_close_door_title_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="88dp" android:text="@string/sdc_brake_close_door_summary" android:layout_marginStart="40dp" app:vuiMode="DISABLED" style="@style/Text_Summary_Style"/>
                <com.xiaopeng.xui.widget.XTabLayout android:layout_gravity="start|top" android:id="@+id/sdc_brake_close_door_tab" android:layout_width="802dp" android:layout_height="80dp" android:layout_marginTop="142dp" android:layout_marginStart="40dp" app:indicatorMarginBottom="6dp" app:indicatorMaxHeight="2dp" app:indicatorShadowRadius="2dp" app:indicatorWidthPercent="100%" app:titles="@array/sdc_brake_close_door_cfg" app:vuiLabel="@string/sdc_brake_close_door_title"/>
            </com.xiaopeng.xui.widget.XFrameLayout>
            <com.xiaopeng.xui.widget.XFrameLayout android:id="@+id/door_angle_layout" android:background="@drawable/sub_item_bottom_bg" android:visibility="gone" android:layout_width="882dp" android:layout_height="210dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top">
                <com.xiaopeng.xui.widget.XTextView android:layout_gravity="start|top" android:id="@+id/door_angle_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:text="@string/door_angle_title" android:layout_marginStart="40dp" app:vuiMode="DISABLED" style="@style/TextStyle.title"/>
                <com.xiaopeng.xui.widget.slider.XSlider android:layout_gravity="start|top" android:id="@+id/door_angle_slider" android:layout_width="802dp" android:layout_height="100dp" android:layout_marginTop="@dimen/setting_scroll_list_item_tab_margin_top" android:layout_marginStart="40dp" app:slider_step="5" app:vuiLabel="@string/door_angle_title"/>
            </com.xiaopeng.xui.widget.XFrameLayout>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/settings_new_win_title_tv" android:text="@string/settings_new_win_title" app:vuiMode="DISABLED" style="@style/SettingCateTextStyle"/>
            <com.xiaopeng.xui.widget.XListSingle android:id="@+id/auto_leave_window_lock_sw" android:background="@drawable/sub_item_top_bg" android:layout_width="882dp" android:layout_height="136dp" app:list_single_left="@layout/x_list_switch" app:list_single_left_right_touch_full="left" app:list_single_text="@string/win_auto_close_by_lock_title" app:vuiFatherLabel="@string/settings_new_win_title" style="@style/XList.Two.WrapHeight"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/high_speed_sw_item" android:background="@drawable/sub_item_bottom_bg" android:layout_width="882dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/high_speed_tv" app:list_two_text_sub="@string/high_speed_desc" app:vuiFatherLabel="@string/settings_new_win_title" style="@style/XList_Two_Item"/>
            <com.xiaopeng.xui.widget.XListTwo android:id="@+id/open_sdc_with_win_sw" android:background="@drawable/sub_item_bottom_bg" android:visibility="gone" android:layout_width="882dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/open_sdc_with_win_sw_title" app:list_two_text_sub="@string/open_sdc_with_win_sw_summary" app:vuiFatherLabel="@string/settings_new_win_title" style="@style/open_sdc_with_win_sw_style"/>
            <com.xiaopeng.xui.widget.XTextView android:id="@+id/child_lock_title_tv" android:visibility="gone" app:vuiMode="DISABLED" style="@style/SettingCateTextStyle"/>
            <com.xiaopeng.xui.widget.XFrameLayout android:id="@+id/child_mode_layout" android:background="@drawable/sub_item_bg" android:visibility="gone" android:layout_width="433dp" android:layout_height="@dimen/trailer_rescue_layout_height" android:layout_marginTop="32dp" android:layout_marginBottom="48dp">
                <com.xiaopeng.xui.widget.XTextView android:layout_gravity="top|center_horizontal" android:id="@+id/child_mode_title" android:layout_width="wrap_content" android:text="@string/child_mode_title" app:vuiMode="DISABLED" style="@style/layout_title_style"/>
                <com.xiaopeng.xui.widget.XTextView android:layout_gravity="bottom|center_horizontal" android:id="@+id/child_mode_content" android:layout_width="wrap_content" app:vuiMode="DISABLED" style="@style/layout_content_style"/>
                <com.xiaopeng.xui.widget.XImageView android:layout_gravity="end|top" android:id="@+id/child_mode_triangle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:src="@drawable/ic_btn_triangle" android:layout_marginEnd="12dp" app:vuiMode="DISABLED"/>
            </com.xiaopeng.xui.widget.XFrameLayout>
            <com.xiaopeng.xui.widget.XListSingle android:id="@+id/left_child_door_lock_sw" android:background="@drawable/sub_item_top_bg" android:visibility="gone" android:layout_width="882dp" android:layout_height="136dp" app:list_single_left="@layout/x_list_switch" app:list_single_left_right_touch_full="left" app:list_single_text="@string/child_lock_rl_title" app:vuiFatherLabel="@string/child_lock_title" style="@style/XList.Singe"/>
            <com.xiaopeng.xui.widget.XListSingle android:id="@+id/right_child_door_lock_sw" android:background="@drawable/sub_item_bottom_bg" android:visibility="gone" android:layout_width="882dp" android:layout_height="136dp" android:layout_marginTop="@dimen/setting_scroll_list_item_margin_top" app:list_single_left="@layout/x_list_switch" app:list_single_left_right_touch_full="left" app:list_single_text="@string/child_lock_rr_title" app:vuiFatherLabel="@string/child_lock_title" style="@style/XList.Singe"/>
        </com.xiaopeng.xui.widget.XLinearLayout>
    </com.xiaopeng.xui.widget.XScrollView>
</com.xiaopeng.xui.widget.XFrameLayout>
