<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/close_btn" android:layout_marginTop="14dp" android:layout_marginStart="14dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:vuiAction="Click" app:vuiLabel="@string/btn_close" style="@style/XButton.Icon.Large.Close"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_number_05_size" android:gravity="start|top" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="76dp" android:layout_marginTop="@dimen/isla_setting_panel_title_margin_top" android:text="@string/isla_setting_title" android:layout_marginStart="138dp" app:layout_constraintStart_toEndOf="@+id/close_btn" app:layout_constraintTop_toTopOf="0" app:vuiMode="DISABLED" style="@style/TextStyle.title"/>
    <com.xiaopeng.xui.widget.XListMultiple android:id="@+id/isla_spd_range_tab_item" android:background="@drawable/sub_item_bg" android:layout_width="@dimen/isla_setting_panel_item_width" android:layout_marginTop="36dp" android:layout_marginStart="48dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title" app:list_multiple_bottom="@layout/layout_isla_speed_range_tab" app:list_multiple_text="@string/isla_speed_range_title" app:list_multiple_text_sub="@string/isla_speed_range_desc" app:vuiFatherLabel="@string/isla_setting_title" style="@style/XList.Multiple.Two"/>
    <com.xiaopeng.xui.widget.XListTwo android:id="@+id/isla_confirm_sw" android:background="@drawable/sub_item_bg" android:layout_width="@dimen/isla_setting_panel_item_width" android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/isla_spd_range_tab_item" app:layout_constraintTop_toBottomOf="@+id/isla_spd_range_tab_item" app:list_two_left="@layout/x_list_switch" app:list_two_left_right_touch_full="left" app:list_two_text="@string/isla_confirm_mode_title" app:list_two_text_sub="@string/isla_confirm_mode_desc" app:vuiFatherLabel="@string/isla_setting_title" style="@style/isla_confirm_sw"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
